# vault-search-mcp

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.json
.claude/rules/: fastmcp-gotchas.md  frontmatter-normalization.md  issue-triage.md  tdd-workflow.md
.claude/skills/execute-script-safely/: SKILL.md
.claude/skills/review-loop/: SKILL.md
.claude/skills/teammate-spawn/: SKILL.md
.github/workflows/: ci.yml
src/vault_search/: __init__.py  __main__.py  cache.py  exceptions.py  filter.py  indexer.py  mcp_contract.py  parser.py  payload_meta.py  resources.py  schema_meta.py  schemas.py  server.py  stats.py  validation.py  watcher.py
tests/: conftest.py  test_exceptions.py  test_filter.py  test_fixture_markers.py  test_frontmatter_key_info.py  test_frontmatter_keys_cache.py  test_indexer.py  test_integration.py  test_mcp_contract.py  test_mcp_input_schema_drift.py  test_mcp_wrapping.py  test_nested_frontmatter_keys.py  test_parser.py  test_schema_resource.py  test_server.py  test_tool_annotations.py  test_validation.py  test_watcher.py
