[project]
name = "vault-search-mcp"
version = "0.1.0"
description = "Obsidian Vault の高速構造化検索 MCP サーバー — FTS5 trigram + 3段キャッシュ"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
vault-search-mcp = "vault_search.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vault_search"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: 遅いテスト (bulk vault 構築等)。CI で `-m 'not slow'` で skip 可能 (#169)",
]
